--- a/notebooks/classifier.ipynb
+++ b/notebooks/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6d735562",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085e3a2b",
+   "id": "815f176d",
    "metadata": {},
    "source": [
     "## Import data"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "afb7965d",
    "metadata": {},
    "outputs": [],
@@ -510,25 +510,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c30f18f",
-   "metadata": {},
+   "id": "5a2fa8f6",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Clean data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e23a917",
-   "metadata": {},
+   "id": "206c1e8e",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Categories remapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "43c5cb04",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "my_dict = {'CRIME': 'Crime',\n",
@@ -579,6 +586,7 @@
    "execution_count": 8,
    "id": "b21a189e",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -599,8 +607,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "526acc5d",
-   "metadata": {},
+   "id": "243e746b",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### cleaning data"
    ]
@@ -608,8 +619,10 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "acd90d6f",
-   "metadata": {},
+   "id": "799b7ecd",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "merged_data = pd.read_csv('../big_picture/data/all_data_12k_merged_cols.csv')"
@@ -618,8 +631,10 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "ef276b90",
-   "metadata": {},
+   "id": "7878d8fa",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "clean_data = data\n",
@@ -630,7 +645,9 @@
    "cell_type": "code",
    "execution_count": 200,
    "id": "5db24476",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "new_data = clean_data.copy()\n",
@@ -640,8 +657,10 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "1e08ea73",
-   "metadata": {},
+   "id": "d0ab8c94",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "new_data = new_data[new_data['content'] != 'Invalid file'].reset_index().drop(columns='index')"
@@ -650,8 +669,10 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "6aa5d4b3",
-   "metadata": {},
+   "id": "8482df9e",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -672,7 +693,9 @@
    "cell_type": "code",
    "execution_count": 203,
    "id": "2b4e7af3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -709,7 +732,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "afcf6918",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "new_data.to_csv('../big_picture/data/data_topics.csv')"
@@ -718,8 +743,10 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "5e5e4348",
-   "metadata": {},
+   "id": "54eb679e",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "example = new_data.iloc[:,:]\n",
@@ -730,7 +757,9 @@
    "cell_type": "code",
    "execution_count": 205,
    "id": "82844b94",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -755,8 +784,11 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "6f54c3f3",
-   "metadata": {},
+   "id": "325c6bbe",
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -787,6 +819,14 @@
     "for idx, val in enumerate(ohe.categories_[0]):\n",
     "    print(idx, val)\n",
     "    val_dict[val] = int(idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7235dd50",
+   "metadata": {},
+   "source": [
+    "## Deep Learning Model"
    ]
   },
   {
@@ -890,11 +930,12 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "5fe45ea5",
+   "id": "230e7b1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings_200k = pd.read_csv('../big_picture/data/embeddings_200k.csv')"
+    "embeddings_200k = pd.read_csv('../big_picture/data/embeddings_200k.csv')\n",
+    "embeddings_200k = embeddings_200k.drop(columns='Unnamed: 0')"
    ]
   },
   {
@@ -1274,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "6b4448f1",
+   "id": "25582b83",
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "21f29307",
+   "id": "7810bae7",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1364,9 @@
    "cell_type": "code",
    "execution_count": 234,
    "id": "cd527a5b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1382,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "7a76262d",
+   "id": "2c856135",
    "metadata": {
     "scrolled": false
    },
@@ -1403,8 +1446,10 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "51e939da",
-   "metadata": {},
+   "id": "3e078fc3",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1437,7 +1482,7 @@
    "execution_count": 228,
    "id": "9962f865",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1479,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "dee87e41",
+   "id": "89700459",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "cb17f187",
+   "id": "2fa9df0e",
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1760f09c",
+   "id": "03372460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1587,7 @@
    "execution_count": 78,
    "id": "82a011cf",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1911,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "a8c9a696",
+   "id": "63a9ea9d",
    "metadata": {},
    "outputs": [
     {
@@ -1987,9 +2032,334 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b85cf5c7",
+   "metadata": {},
+   "source": [
+    "## ML Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d8e41dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings_200k = pd.read_csv('../big_picture/data/embeddings_200k.csv')\n",
+    "embeddings_200k = embeddings_200k.drop(columns='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bd12dcc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CRIME</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Melissa Jeltsen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
+       "      <td>She left her husband. He killed their children...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
+       "      <td>Andy McDonald</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/will-smit...</td>\n",
+       "      <td>Of course it has a song.</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Hugh Grant Marries For The First Time At Age 57</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/hugh-gran...</td>\n",
+       "      <td>The actor and his longtime girlfriend Anna Ebe...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/jim-carre...</td>\n",
+       "      <td>The actor gives Dems an ass-kicking for not fi...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/julianna-...</td>\n",
+       "      <td>The \"Dietland\" actress said using the bags is ...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        category                                           headline  \\\n",
+       "0          CRIME  There Were 2 Mass Shootings In Texas Last Week...   \n",
+       "1  ENTERTAINMENT  Will Smith Joins Diplo And Nicky Jam For The 2...   \n",
+       "2  ENTERTAINMENT    Hugh Grant Marries For The First Time At Age 57   \n",
+       "3  ENTERTAINMENT  Jim Carrey Blasts 'Castrato' Adam Schiff And D...   \n",
+       "4  ENTERTAINMENT  Julianna Margulies Uses Donald Trump Poop Bags...   \n",
+       "\n",
+       "           authors                                               link  \\\n",
+       "0  Melissa Jeltsen  https://www.huffingtonpost.com/entry/texas-ama...   \n",
+       "1    Andy McDonald  https://www.huffingtonpost.com/entry/will-smit...   \n",
+       "2       Ron Dicker  https://www.huffingtonpost.com/entry/hugh-gran...   \n",
+       "3       Ron Dicker  https://www.huffingtonpost.com/entry/jim-carre...   \n",
+       "4       Ron Dicker  https://www.huffingtonpost.com/entry/julianna-...   \n",
+       "\n",
+       "                                   short_description       date  \n",
+       "0  She left her husband. He killed their children... 2018-05-26  \n",
+       "1                           Of course it has a song. 2018-05-26  \n",
+       "2  The actor and his longtime girlfriend Anna Ebe... 2018-05-26  \n",
+       "3  The actor gives Dems an ass-kicking for not fi... 2018-05-26  \n",
+       "4  The \"Dietland\" actress said using the bags is ... 2018-05-26  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_json('../raw_data/news_category_data.json', lines=True)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "417ef426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = data.copy()\n",
+    "new_data['category'] = data.category.map(lambda x: my_dict[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df5ffba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_data = new_data['category']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d2154275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200853, 16)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "ohe = OneHotEncoder()\n",
+    "\n",
+    "y = ohe.fit_transform(pd.DataFrame(cat_data)).toarray()\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "313cab48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((6000, 768), (6000, 16))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set X and y\n",
+    "X = embeddings_200k.iloc[:6000, :]\n",
+    "new_y = y[:6000]\n",
+    "X.shape, new_y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dc68a507",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 14 candidates, totalling 70 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:   48.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  70 out of  70 | elapsed:  1.7min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=nan,\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('knn',\n",
+       "                                        KNeighborsClassifier(algorithm='auto',\n",
+       "                                                             leaf_size=30,\n",
+       "                                                             metric='minkowski',\n",
+       "                                                             metric_params=None,\n",
+       "                                                             n_jobs=None,\n",
+       "                                                             n_neighbors=5, p=2,\n",
+       "                                                             weights='uniform'))],\n",
+       "                                verbose=False),\n",
+       "             iid='deprecated', n_jobs=-1,\n",
+       "             param_grid={'knn__leaf_size': [30, 40],\n",
+       "                         'knn__n_neighbors': [3, 4, 5, 6, 7, 8, 9]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='accuracy', verbose=1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from numpy.random import uniform\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Create Pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('knn', KNeighborsClassifier()),\n",
+    "])\n",
+    "\n",
+    "# Set parameters to search\n",
+    "parameters = {\n",
+    "    'knn__leaf_size': [30, 40],\n",
+    "    'knn__n_neighbors': list(range(3,10))}\n",
+    "\n",
+    "# Perform grid search\n",
+    "grid_search = GridSearchCV(pipeline, parameters, n_jobs=-1, \n",
+    "                           verbose=1, scoring = \"accuracy\", \n",
+    "                           refit=True, cv=5)\n",
+    "\n",
+    "grid_search.fit(X,new_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "790cafd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5208333333333333"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_score_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5ba5ac2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0625"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/16"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc92396",
+   "id": "8015dc71",
    "metadata": {},
    "outputs": [],
    "source": []
