added reduce_dimensions function to vectorizers file and updated notebook

--- a/notebooks/calem.ipynb
+++ b/notebooks/calem.ipynb
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fb10bf15",
+   "id": "e56bb776",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "63369bd8",
+   "id": "6ff4cfaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f335c6b",
+   "id": "eefb6fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8fa7e079",
+   "id": "4d60a49f",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0fd90d08",
+   "id": "f6b922f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e2dd01a0",
+   "id": "0fc60edd",
    "metadata": {
     "scrolled": false
    },
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6a24be2b",
+   "id": "b92fe424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "17f00c43",
+   "id": "349acd05",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6c2b0257",
+   "id": "bb07c101",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "113ced5f",
+   "id": "1336c7ac",
    "metadata": {
     "scrolled": true
    },
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9929b4d5",
+   "id": "7d592de1",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "c98ac151",
+   "id": "b801d485",
    "metadata": {
     "scrolled": true
    },
@@ -1174,10 +1174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "8d95d297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'embeddings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5aaa63b4dd08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m umap_embeddings = umap.UMAP(n_neighbors=15, \n\u001b[1;32m      3\u001b[0m                             \u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                             metric='cosine').fit_transform(embeddings)\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'embeddings' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import umap\n",
     "umap_embeddings = umap.UMAP(n_neighbors=15, \n",
@@ -1633,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4a730001",
+   "id": "3966d2e8",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47bb16a0",
+   "id": "4720d2bb",
    "metadata": {},
    "outputs": [],
    "source": []
