--- a/notebooks/martins_preprocess.ipynb
+++ b/notebooks/martins_preprocess.ipynb
@@ -631,6 +631,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2627d624",
+   "metadata": {},
+   "source": [
+    "### Testing main preprocessing function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "id": "19f7b7af",
@@ -656,8 +664,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "caa6b634",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df_test = pd.read_csv(\"../big_picture/data/data_30k_all_true.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "916c1adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'invalid file advanced hike two option really stood first right across desert botanical garden one little adventure lot grapefruit valley sun'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test[\"news_all_data\"].iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ef23ef",
    "metadata": {},
    "outputs": [],
    "source": []
