small fixes to variables in fit and divide labels function, and added classification report function

--- a/notebooks/newsapi.ipynb
+++ b/notebooks/newsapi.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "4acc2a26",
    "metadata": {},
    "outputs": [],
@@ -20,51 +20,68 @@
     "import requests\n",
     "\n",
     "url = 'https://newsapi.org/v2/'\n",
-    "url_params = 'everything' #everything or top headlines\n",
+    "everything = 'everything'\n",
+    "top_headlines = 'top-headlines'\n",
+    "news_list = ['associated-press', 'abc-news']\n",
     "\n",
-    "params = {'qInTitle': ['barack', 'obama', 'warns', 'donald', 'trump', 'gop'],\n",
-    "          'domains': 'huffpost.com',\n",
+    "params = {'qInTitle': \"Tesla 'suspends' Bitcoin car purchases citing environmental impact\",\n",
+    "          #'sources': news_list,\n",
+    "          #'from': '2021-06-04',\n",
     "          'apiKey': 'a97dc775dfc04e44867f79e0b512590b'}\n",
     "\n",
-    "response = requests.get(url + url_params, params=params)"
+    "response = requests.get(url + everything, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "398b9ef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'status': 'ok',\n",
-       " 'totalResults': 2,\n",
-       " 'articles': [{'source': {'id': None, 'name': 'HuffPost'},\n",
-       "   'author': 'Kimberley Richards',\n",
-       "   'title': ' Barack Obama Announces Family’s Beloved Dog Bo Has Died',\n",
-       "   'description': 'The former first family got the Portuguese water dog shortly after Obama was first inaugurated.',\n",
-       "   'url': 'https://www.huffpost.com/entry/barack-obama-dog-bo-died_n_6096e188e4b0ae3c687f1de8',\n",
-       "   'urlToImage': 'https://img.huffingtonpost.com/asset/6096e2f51e0000466710134e.jpeg?cache=7zyltgepab&ops=1778_1000',\n",
-       "   'publishedAt': '2021-05-08T19:22:38Z',\n",
-       "   'content': 'Former President Barack Obama announced that his familys beloved dog, Bo, has died.\\xa0\\r\\nThe former president tweeted on Saturday that the Obamas lost a true friend and loyal companion.\\r\\nThis is a devel… [+42 chars]'},\n",
-       "  {'source': {'id': None, 'name': 'HuffPost'},\n",
-       "   'author': 'Lee Moran',\n",
-       "   'title': 'Barack Obama Warns Of Republicans ‘Rigging The Game’',\n",
-       "   'description': 'GOP voter restriction laws are the “kind of dangerous behavior that we’re going to have to push back on,\" said the former president.',\n",
-       "   'url': 'https://www.huffpost.com/entry/barack-obama-voting-restrictions-rigging-the-game_n_60bb5019e4b0e80b577d3098',\n",
-       "   'urlToImage': 'https://img.huffingtonpost.com/asset/60bb57052400007d1709592d.png?cache=qjwfod2zuk&ops=1778_1000',\n",
-       "   'publishedAt': '2021-06-05T11:30:26Z',\n",
-       "   'content': 'Barack Obama on Friday called out GOP voter suppression laws, suggesting companies have a big responsibility to at least speak out against them as some did when new restrictions were introduced in Ge… [+684 chars]'}]}"
+       "[{'source': {'id': 'engadget', 'name': 'Engadget'},\n",
+       "  'author': 'https://www.engadget.com/about/editors/richard-lawler',\n",
+       "  'title': \"Tesla 'suspends' Bitcoin car purchases citing environmental impact\",\n",
+       "  'description': \"You can't buy a Tesla with Bitcoin anymore..\",\n",
+       "  'url': 'https://www.engadget.com/elon-musk-bitcoin-221708146.html',\n",
+       "  'urlToImage': 'https://s.yimg.com/os/creatr-uploaded-images/2021-05/a0f90c30-b36f-11eb-aff6-04fb28cf2f4b',\n",
+       "  'publishedAt': '2021-05-12T22:17:08Z',\n",
+       "  'content': 'Just weeks after Tesla started accepting Bitcoin as currency for cars, Elon Musk revealed in a tweet that it will \"suspend\" the effort. According to the release (Tesla does not appear to have a funct… [+768 chars]'},\n",
+       " {'source': {'id': None, 'name': 'Madshrimps.be'},\n",
+       "  'author': 'Stefan Mileschin',\n",
+       "  'title': \"Tesla 'suspends' Bitcoin car purchases citing environmental impact\",\n",
+       "  'description': \"You can't buy a Tesla with Bitcoin anymore. \\n\\nhttps://www.engadget.com/elon-musk-bitcoin-221708146.html\",\n",
+       "  'url': 'http://www.madshrimps.be/news/item/205419?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+madshrimps+%28Madshrimps+News+RSS+Feed%29',\n",
+       "  'urlToImage': None,\n",
+       "  'publishedAt': '2021-05-13T09:25:14Z',\n",
+       "  'content': 'Copyright © 2001-2011 Madshrimps, All rights reserved.Graphic Design by Dennis Kestelle, Programming by Maarten Menten,\\r\\nOverall Site design by John Meys\\r\\nAll information and graphics contained in Ma… [+135 chars]'},\n",
+       " {'source': {'id': None, 'name': 'Slashdot.org'},\n",
+       "  'author': 'feedfeeder',\n",
+       "  'title': \"Tesla 'suspends' Bitcoin car purchases citing environmental impact\",\n",
+       "  'description': \"You can't buy a Tesla with Bitcoin anymore.\",\n",
+       "  'url': 'https://slashdot.org/firehose.pl?op=view&amp;id=146200208',\n",
+       "  'urlToImage': None,\n",
+       "  'publishedAt': '2021-05-12T22:32:34Z',\n",
+       "  'content': '\"The whole problem with the world is that fools and fanatics are always so\\r\\ncertain of themselves, but wiser people so full of doubts.\"\\r\\n-- Bertrand Russell'},\n",
+       " {'source': {'id': None, 'name': 'Madshrimps.be'},\n",
+       "  'author': 'Stefan Mileschin',\n",
+       "  'title': \"Tesla 'suspends' Bitcoin car purchases citing environmental impact\",\n",
+       "  'description': \"You can't buy a Tesla with Bitcoin anymore. \\n\\nhttps://www.engadget.com/elon-musk-bitcoin-221708146.html\",\n",
+       "  'url': 'http://www.madshrimps.be/news/item/205419',\n",
+       "  'urlToImage': None,\n",
+       "  'publishedAt': '2021-05-13T09:25:14Z',\n",
+       "  'content': 'Copyright © 2001-2011 Madshrimps, All rights reserved.Graphic Design by Dennis Kestelle, Programming by Maarten Menten,\\r\\nOverall Site design by John Meys\\r\\nAll information and graphics contained in Ma… [+135 chars]'}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.json()"
+    "response.json()['articles']"
    ]
   },
   {
