--- a/notebooks/classifier.ipynb
+++ b/notebooks/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6d735562",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "afb7965d",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "43c5cb04",
    "metadata": {
     "hidden": true
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "id": "799b7ecd",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "id": "7878d8fa",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "id": "5db24476",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "id": "d0ab8c94",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
       "\u001b[0;31mKeyError\u001b[0m: 'content'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-131-6ae13772e25e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'content'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'Invalid file'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'index'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-6ae13772e25e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'content'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'Invalid file'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'index'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/lewagon/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3023\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3024\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/lewagon/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3084\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'content'"
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "id": "8482df9e",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "4  The \"Dietland\" actress said using the bags is ... 2018-05-26  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 15,
    "id": "2b4e7af3",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "54eb679e",
    "metadata": {},
    "outputs": [],
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 17,
    "id": "82844b94",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
        "(200853, 16)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
+   "id": "2fd70dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "325c6bbe",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "id": "230e7b1d",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +1090,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "c6acaf7f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1542,21 +1565,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "id": "2c856135",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "results = np.argmax(model.predict(embeddings_200k), axis=-1)"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-60313975f3d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membeddings_200k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 174,
    "id": "00e88777",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1655,38 +1690,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "672a9a35",
+   "cell_type": "markdown",
+   "id": "053733f9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "results = model.predict(embeddings_200k.iloc[0:1, :])"
+    "## Classification reports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 21,
+   "id": "8ea71b5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "new_model = load_model('../big_picture/models/classifier_baseline')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2d31ea79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = np.argmax(new_model.predict(embeddings_200k), axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "672a9a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = new_model.predict(embeddings_200k.iloc[0:1, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "80678fa3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4.5869844e-03, 1.7467572e-03, 9.4882238e-01, 1.5739941e-04,\n",
-       "        8.0440263e-04, 3.3250399e-02, 1.4230001e-04, 3.9446625e-04,\n",
-       "        4.2785722e-04, 6.8849269e-03, 6.4571245e-06, 1.7651566e-06,\n",
-       "        2.1724892e-03, 7.1335919e-05, 9.2310220e-06, 5.2086881e-04]],\n",
-       "      dtype=float32)"
+       "(array([[4.5869844e-03, 1.7467572e-03, 9.4882238e-01, 1.5739941e-04,\n",
+       "         8.0440263e-04, 3.3250399e-02, 1.4230001e-04, 3.9446625e-04,\n",
+       "         4.2785722e-04, 6.8849269e-03, 6.4571245e-06, 1.7651566e-06,\n",
+       "         2.1724892e-03, 7.1335919e-05, 9.2310220e-06, 5.2086881e-04]],\n",
+       "       dtype=float32),\n",
+       " array([ 2,  5,  5, ..., 12, 12, 12]))"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
+    "results, classes"
    ]
   },
   {
@@ -1781,11 +1847,7 @@
    "id": "0eceb11a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from tensorflow.keras.models import load_model\n",
-    "\n",
-    "new_model = load_model('models/classifier_baseline')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2025,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "id": "9962f865",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2124,7 @@
    "source": [
     "from sklearn.metrics import classification_report \n",
     "\n",
-    "print(classification_report(y_example.map(val_dict), results))"
+    "print(classification_report(y_example.map(val_dict), classes))"
    ]
   },
   {
